--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,11 +14,21 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://duxu97yt14q37.cloudfront.net/B1qxKD4Jq"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d1f01xri6nyv0g.cloudfront.net/K5oxKD4Ja"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
+<h2>在联邦政府内成立“政府效率部”</h2>
+<p>川普总统的首批行政令之一，就是正式设立“政府效率部”（DOGE）。不过，与之前的规划不同，DOGE不仅是咨询小组，更将是联邦政府内的一个实体。</p>
+<p>行政令将美国数位服务局（United States Digital Service）暂时更名为美国政府效率部（United States DOGE Service），并指示该机构对联邦机构使用的软件，进行彻底改革，作为“软件现代化计划”的一部分，以“最大限度地提高政府效率和生产力”。</p>
+<p>它还指示，联邦机构必须各自成立DOGE团队。行政令指出：“每个DOGE团队通常必须包括一名DOGE团队负责人、一名工程师、一名人力资源专家和一名律师。”</p>
+<p>该行政令并未提及削减联邦预算、劳动力或监管。不过，未来川普可能进一步发布行政令，实现这些目标。</p>
+<p>两位消息人士告诉CNN，让DOGE成为行政部门的一部分，是最近几天的进展。川普宣布该倡议时表示，它将“提供政府以外的建议和指导”。</p>
+<p>这项新进展，引发了人们的疑问，目前还不确定马斯克如何以外部顾问的身份，领导这一个新机构。如果他是外部顾问，将不会像政府员工那样，需要揭露财务状况和利益冲突。</p>
 <h2>川普与梅拉尼娅在就职舞会上开舞</h2>
 <p>川普夫妇在总统就职舞会上开启了当晚的活动，他们在舞会上跳起了“共和国战歌”（Battle Hymn of the Republic）。</p>
 <p>随后，他们与副总统万斯夫妇一同登台。</p>
+<p>周一将举办3场就职舞会，分别为“总司令舞会”（Commander in Chief Ball）、“自由舞会”（Liberty Inaugural Ball）和晚间的“星光舞会”（Starlight Ball），预计川普3场都会出席。</p>
+<p>在总司令舞会期间，川普透过卫星通信对一小群驻韩美军发表了演说。</p>
+<p>川普和万斯在他们妻子的陪同下，用军刀分切了一个装饰着美国各军种徽章的蛋糕，上面还有一架飞机。</p>
 <figure id="attachment_14418537" aria-describedby="caption-attachment-14418537" style="width: 640px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14418537-GettyImages-2194460835.jpg"><img decoding="async" class="size-djy_1080 wp-image-14418537" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418537-GettyImages-2194460835-1080x669.jpg" alt="" width="640" b="396" /></a><figcaption id="caption-attachment-14418537" class="wp-caption-text">2025年1月20日，在沃尔特·华盛顿会议中心的总通就职舞会上，美国总统川普与第一夫人梅拉尼娅在美国爱国歌曲《共和国战歌》之下，一同跳起了舞。 (JIM WATSON/AFP via Getty Images)</figcaption></figure>
 <h2>欧盟领导人寻求加强跨大西洋伙伴关系</h2>
 <p>周一，欧盟委员会主席冯德莱恩（Ursula von der Leyen）向川普送上了“最美好的祝愿”，她表示，“欧盟期待与您密切合作，共同应对全球挑战”。</p>
@@ -363,14 +373,13 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378927.md#1">白宫：拜登总统将出席川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411621.md#1">澳外长受邀参加美总统川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416562.md#1">韩国瑜率台湾代表团 赴美出席川普就职典礼</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/4/n11234439.md#1" target="_blank">【征文】文宇：史上最公平的选官制——科举千年兴衰录（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/13/n11256153.md#1" target="_blank">留守女孩的命运转变</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/10/n10551502.md#1" target="_blank">【还原史实】镇反土改 中共建政初年的恐怖统治</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
